Mudanças para exibição de boletim